# HouseGPT---Medical-Diagnostic-Agent-Multimodal

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  template.py
docker/: Dockerfile
notebooks/: RAG.ipynb
src/house_gpt/agent/chains/: __init__.py  chains.py
src/house_gpt/agent/graph/: __init__.py  edges.py  graph.py  nodes.py
src/house_gpt/agent/graph/nodes/: __init__.py  context_nodes.py  conversation_nodes.py  dispatch_node.py  memory_nodes.py  rag_nodes.py  router_nodes.py  summarize_nodes.py
src/house_gpt/agent/helpers/: formatter.py  model_factory.py
src/house_gpt/agent/prompts/: __init__.py  character.py  memory.py  router.py
src/house_gpt/api/v1/: app.py
src/house_gpt/api/v1/routers/: chat.py
src/house_gpt/core/: exceptions.py  graph_instance.py  logger.py  settings.py
src/house_gpt/memory/ltm/: memory_manager.py  vector_store.py
src/house_gpt/memory/models/: __init__.py  memory_model.py  rag_model.py
src/house_gpt/memory/rag/: rag_memory.py
src/house_gpt/multimodal/image/: __init__.py  image_to_text.py
src/house_gpt/multimodal/speech/: speech_to_text.py
src/house_gpt/schedules/: context_generation.py  schedules.py
src/house_gpt/services/: graph_services.py  image_services.py
src/house_gpt/states/: house.py  memory.py  response.py
tests/: simple_test.py
