[project]
name = "house-gpt"
version = "0.1.0"
description = ""
authors = [
    {name = "Fadi Fares",email = "faresfadi0412@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15.0"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.43.0,<0.44.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "transformers (>=5.5.0,<6.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "requests (>=2.33.1,<3.0.0)",
    "chainlit (>=2.10.1,<3.0.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "elevenlabs (>=2.41.0,<3.0.0)",
    "langchain (>=1.2.15,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-core (>=1.2.26,<2.0.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "langchain-classic (>=1.0.3,<2.0.0)",
    "langchain-qdrant (>=1.1.0,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "together (>=2.7.0,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "qdrant-client (>=1.17.1,<2.0.0)",
    "langgraph (>=1.1.6,<2.0.0)",
    "langgraph-checkpoint-sqlite (>=3.0.3,<4.0.0)",
    "uuid (>=1.30,<2.0)"
]

[tool.poetry]
packages = [{include = "house_gpt", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
