[project]
name = "house-gpt"
version = "0.1.0"
description = ""
authors = [
    {name = "Fadi Fares",email = "faresfadi0412@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15.0"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.43.0,<0.44.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "requests (>=2.33.1,<3.0.0)",
    "langchain (>=1.2.15,<2.0.0)",
    "langchain-core (>=1.2.26,<2.0.0)",
    "langchain-qdrant (>=1.1.0,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "qdrant-client (>=1.17.1,<2.0.0)",
    "langgraph (>=1.1.6,<2.0.0)",
    "uuid (>=1.30,<2.0)",
    "fastembed (>=0.8.0,<0.9.0)",
    "langchain-openai (>=1.1.12,<2.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "gunicorn (>=25.3.0,<26.0.0)",
    "psycopg (>=3.3.3,<4.0.0)",
    "psycopg-pool (>=3.3.0,<4.0.0)",
    "langgraph-checkpoint-postgres (>=3.0.5,<4.0.0)",
    "groq (>=1.1.2,<2.0.0)",
    "python-multipart (>=0.0.24,<0.0.25)",
    "langchain-ollama (>=1.1.0,<2.0.0)",
    "openai-whisper (>=20250625,<20250626)",
]

[tool.poetry]
packages = [{include = "house_gpt", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
